@@ -1,4 +1,4 @@
-# $Id: Makefile,v 11.4 1994/11/09 00:07:51 tom Exp $
+# $Id: Makefile,v 11.5 1995/01/29 00:37:52 tom Exp $
 # Top-level makefile for CM_TOOLS directory-level permissions utility
 
 ####### (Development) ##########################################################
@@ -18,14 +18,14 @@ MFILES	=\
 
 ####### (Standard Productions) #################################################
 all\
-run_tests::	$L/$(TD_LIB).a bin
+run_test::	$L/$(TD_LIB).a bin
 
 all\
 clean\
 clobber\
 destroy\
 sources\
-run_tests\
+run_test\
 lint.out::	$(MFILES)
 	cd src;		$(MAKE) $@
 	cd test;	$(MAKE) $@
